--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         </header>
         <main>
             <h3 class="title">The Restaurant</h3> <br>
-            <p><b>The black Goose Bistro Offers Casual Lunch and dinner fare in a hip atmosphere. the menu changes regularly to highlight the freshest ingredients.</b></p> <br>
+            <p><b>The black Goose Bistro Offers Casual Lunch and dinner fare in a hip atmosphere. the menu changes <br>regularly to highlight the freshest ingredients.</b></p> <br>
             <h3 class="title">Catering</h3> <br>
             <p><strong>You Have fun ... We'll handle the cooking. Black Goose Catering can Handle events from snacks for bridge club to elegant corporate fundraisers.</strong></p> <br>
 
