--- a/index.html
+++ b/index.html
@@ -11,13 +11,16 @@
         <main>
             <h3 class="title">The Restaurant</h3> <br>
             <p><b>The black Goose Bistro Offers Casual Lunch and dinner fare in a hip atmosphere. the menu changes <br>regularly to highlight the freshest ingredients.</b></p> <br>
-            <h3 class="title">Catering</h3> <br>
+            <h3 class="title">Catering</h3> <br> 
             <p><strong>You Have fun ... We'll handle the cooking. Black Goose Catering can Handle events from snacks for bridge club to elegant corporate fundraisers.</strong></p> <br>
 
             <h3 class="title">Location And Hours</h3> <br>
             <p><strong>Seekonk. Massachussets:<br>
             Monday through 11am to 9pm <br>
-        Friday and Saturday, 11am to midnight</strong></p>
+        Friday and Saturday, 11am to midnight</strong></p> <br> <br>
+        <p><b>The black Goose Bistro Offers Casual Lunch and dinner fare in a hip atmosphere. the menu changes <br>regularly to highlight the freshest ingredients.</b></p> <br>
+        <p><strong>You Have fun ... We'll handle the cooking. Black Goose Catering can Handle events from snacks for bridge club to elegant corporate fundraisers.</strong></p> <br>
+        <p><strong>You Have fun ... We'll handle the cooking. Black Goose Catering can Handle events from snacks for bridge club to elegant corporate fundraisers.</strong></p> <br>
         </main>
     </body>
-</html>
+</html>g
